--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "jwt-decode": "^3.1.1",
     "ng2-order-pipe": "^0.1.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.1.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.9.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
